# cmake_project

./: .clang-format  .gitignore  CMakeLists.txt  README.md  main.cpp
.github/workflows/: ci.yml
cmake/: compiler_flags.cmake
sample/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  samplelibrary_tests.cpp
